made nav fixed might fix problem on mobile and removed div.

--- a/css/burgermenu.css
+++ b/css/burgermenu.css
@@ -14,7 +14,7 @@ body {
 
 .menuToggle {
     display: block;
-    position: absolute;
+    position: fixed;
     margin: var(--top) var(--left);
     z-index: 2;
 }
